crates/omnifs-cli/tests/snapshots/cli_transcripts__bare_fresh.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&fixture.run(&[]))"
---
exit: 0
stdout:
No mounts yet. omnifs projects external services as files.

Get started:  omnifs setup        boot the daemon and quick-start mounts
or piecewise: omnifs mount add    configure one mount
stderr:
