crates/omnifs-cli/tests/snapshots/cli_transcripts__credential_set_help.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&fixture.run(&[\"credential\", \"set\", \"--help\"]))"
---
exit: 0
stdout:
Set static-token material from an environment variable

Usage: omnifs credential set [OPTIONS] --from-env <VARIABLE> <NAME>

Arguments:
  <NAME>  Credential resource name

Options:
      --from-env <VARIABLE>  Environment variable containing the token. The value is never printed
  -h, --help                 Print help

Global options:
  -v, --verbose...       Increase tracing verbosity. -v = info, -vv = debug with span events.
                         Overridden by `RUST_LOG`
      --output <OUTPUT>  Output contract for this invocation [default: human] [possible values:
                         human, json, jsonl]
  -q, --quiet            Suppress conversational narration on stderr. Receipts, progress settle
                         lines, and errors are preserved
      --no-input         Reject prompts and browser handoffs
      --yes              Approve confirmation-only decisions
stderr:
