crates/omnifs-cli/tests/snapshots/cli_transcripts__down_stopped.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&fixture.run(&[\"down\"]))"
---
exit: 0
stdout:
stderr:
Nothing to stop. The daemon isn't running.
