crates/omnifs-cli/tests/snapshots/cli_transcripts__filesystem_help.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&fixture.run(&[\"fs\", \"--help\"]))"
---
exit: 0
stdout:
Add, list, inspect, remove, restart, or enter Filesystems

Usage: omnifs fs [OPTIONS] <COMMAND>

Commands:
  add      Add a platform-supported Filesystem
  ls       List desired Filesystems and their observed state
  show     Show one desired Filesystem and its observed state
  rm       Remove a Filesystem from desired state
  restart  Restart a Filesystem through a durable action
  shell    Enter the Filesystem or run a command in its runtime
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
  -v, --verbose...       Increase tracing verbosity. -v = info, -vv = debug with span events.
                         Overridden by `RUST_LOG`
      --output <OUTPUT>  Output contract for this invocation [default: human] [possible values:
                         human, json, jsonl]
  -q, --quiet            Suppress conversational narration on stderr. Receipts, progress settle
                         lines, and errors are preserved
      --no-input         Reject prompts and browser handoffs
      --yes              Approve confirmation-only decisions
stderr:
