crates/omnifs-cli/tests/snapshots/cli_transcripts__fs_create.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: fixture.transcript(&create)
---
exit: 0
stdout:
configured filesystem `dev` (nfs/host)
stderr:
