crates/omnifs-cli/tests/snapshots/cli_transcripts__fs_list_detached.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: fixture.transcript(&list)
---
exit: 0
stdout:
Filesystems  1 detached
  Name  Protocol  Runtime  Location                                                         Coverage      State
  dev   nfs       host     $OMNIFS_HOME/mnt  all 0 mounts  ○ detached
stderr:
