crates/omnifs-cli/tests/snapshots/cli_transcripts__fs_list_legacy.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&list)"
---
exit: 0
stdout:
NAME	PROTOCOL	RUNTIME	STATE	LOCATION
dev	nfs	host	legacy detached config	$OMNIFS_HOME/mnt
  Import explicitly with `omnifs fs create --name dev --protocol nfs --runtime host`
stderr:
Starting the daemon
