crates/omnifs-cli/tests/snapshots/cli_transcripts__human_usage_error.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&fixture.run(&[\"fs\", \"attach\"]))"
---
exit: 2
stdout:
stderr:
error: the following required arguments were not provided:
  --name <NAME>

Usage: omnifs fs attach --name <NAME>

For more information, try '--help'.
