crates/omnifs-cli/tests/snapshots/cli_transcripts__logs_missing.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&fixture.run(&[\"logs\"]))"
---
exit: 0
stdout:
stderr:
No daemon log yet. It's written on first omnifs up.
