crates/omnifs-cli/tests/snapshots/cli_transcripts__mount_add_help.snap
---
source: crates/omnifs-cli/tests/cli_transcripts.rs
expression: "fixture.transcript(&fixture.run(&[\"mount\", \"add\", \"--help\"]))"
---
exit: 0
stdout:
Add a Mount resource through an interactive wizard

Usage: omnifs mount add [OPTIONS]

Options:
  -h, --help  Print help

Global options:
  -v, --verbose...       Increase tracing verbosity. -v = info, -vv = debug with span events.
                         Overridden by `RUST_LOG`
      --output <OUTPUT>  Output contract for this invocation [default: human] [possible values:
                         human, json, jsonl]
  -q, --quiet            Suppress conversational narration on stderr. Receipts, progress settle
                         lines, and errors are preserved
      --no-input         Reject prompts and browser handoffs
      --yes              Approve confirmation-only decisions
stderr:
